# gmailclassifier

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TESTING.md  bedrock_classifier.py  classifier_config.example.json  config.py  docker-compose.yml  email_classifier_agent.py  gmail_client.py  llm_factory.py  llm_provider.py  llm_utils.py  main.py  model_config.example.json  openrouter_classifier.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_token.py  verify_setup.py
.github/workflows/: docker-build.yml  docker-publish.yml  security-scan.yml  test.yml
.serena/: project.yml
providers/: __init__.py  anthropic_provider.py  bedrock_provider.py  ollama_provider.py  openai_provider.py
tests/: __init__.py  conftest.py  test_anthropic_provider.py  test_bedrock_provider.py  test_config.py  test_email_classifier_agent.py  test_gmail_client.py  test_llm_factory.py  test_llm_utils.py  test_ollama_provider.py  test_openai_provider.py  test_openrouter_classifier.py
